--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacto</a>
+          <a class="nav-link" href="pruebas.html">pruebas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="login.html">Productos</a>
