--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>Prueba form hoja de vida</title>
 </head>
 <body>
+    <div class = "shadow_box"></div>
     <div>
         <form class="box" action="index.html" method="post">
             <h1>iniciar sesión</h1>
@@ -15,6 +16,6 @@
             <input type="submit" name="" value="Enviar">
         </form>
     </div>
-
+   
 </body>
 </html>
