--- a/acercade.html
+++ b/acercade.html
@@ -1,11 +1,61 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon"
+    href="https://cdn.glitch.com/a5df6fe8-b520-4597-abd5-df530f9039bd%2Ficono_aguacate.png?v=1608332855966" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Open+Sans&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400&display=swap"
+    rel="stylesheet" />
+  <title>HassGourmet</title>
 </head>
+
 <body>
-    
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img
+          src="https://cdn.glitch.com/a5df6fe8-b520-4597-abd5-df530f9039bd%2FLogo%20%20Hass%20Gourmet.ong.png?v=1608387972169"
+          alt="" width="80" height="30" />
+      </a>
+      <div class="d-flex justify-content-end">
+        <ul class="nav">
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#">Contacto</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#productos">Productos</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="acercade.html">Acerca de</a>
+            </li>
+        </ul>
+    </div>
+    </nav>
+    <div class="cover d-flex justify-content-center align-items-center flex-column">
+      <h1>
+        Hass Gourmet S.A
+      </h1>
+      <p>
+        Productores de Aguacate
+      </p>
+      <button type="button" class="btn btn-success">
+        Conocenos
+      </button>
+    </div>
+  </header>
 </body>
+
 </html>
