--- a/login.html
+++ b/login.html
@@ -3,9 +3,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style2.css">
+    <title>Prueba form hoja de vida</title>
 </head>
 <body>
-    
+    <div class = "shadow_box"></div>
+    <div>
+        <form class="box" action="index.html" method="post">
+            <h1>iniciar sesión</h1>
+            <input type="text" name="" placeholder="Usuario">
+            <input type="password" name="" placeholder="Contraseña">
+            <input type="submit" name="" value="Enviar">
+        </form>
+    </div>
+   
 </body>
 </html>
