--- a/pruebas.html
+++ b/pruebas.html
@@ -1,11 +1,77 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="shortcut icon"
+          href="img/icono_aguacate.png" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+          href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Open+Sans&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400&display=swap"
+          rel="stylesheet" />
+        <title>HassGourmet</title>
+      </head>
+
 <body>
-    
+  <header>
+    <nav class="navbar justify-content-center">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img
+          src="img/logo_fondo_blanco.jpg"
+          alt="" width="80" height="30" /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse nav-options" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="acercade.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Contáctanos</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pagos</a>  
+              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                <li><a class="dropdown-item" href="#">opción 1</a></li>
+                <li><a class="dropdown-item" href="#">opción 2</a></li>
+                <li><hr class="dropdown-divider">hola</li>
+                <li><a class="dropdown-item" href="#">opción 3</a></li>
+              </ul>
+            </li>
+          </ul>
+          <div class="div-buttons">
+            <button class="btn btn-outline-success boton-nav" type="button"><a class="text-button-login" href="login.html">iniciar sesión</a></button>
+            <button class="btn btn-outline-success boton-nav" type="button">Registrate</button>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="cover d-flex justify-content-center align-items-center flex-column">
+      <h1>
+        Hass Gourmet S.A.S
+      </h1>
+      <p>
+        Productores de Aguacate
+      </p>
+      <button type="button" class="btn btn-success">
+        Conocenos
+      </button>
+    </div>
+  </header>
+  <div class = "contenido">
+    <h2 class="text-contactanos">Somos una empresa comprometida con nuestros clientes</h2>
+  </div>
 </body>
 </html>
+
