--- a/pruebas.html
+++ b/pruebas.html
@@ -21,41 +21,26 @@
 
 <body>
   <header>
-    <nav class="navbar justify-content-center">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img
           src="img/logo_fondo_blanco.jpg"
-          alt="" width="80" height="30" /></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse nav-options" id="navbarScroll">
-          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="acercade.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Contáctanos</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pagos</a>  
-              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                <li><a class="dropdown-item" href="#">opción 1</a></li>
-                <li><a class="dropdown-item" href="#">opción 2</a></li>
-                <li><hr class="dropdown-divider">hola</li>
-                <li><a class="dropdown-item" href="#">opción 3</a></li>
-              </ul>
-            </li>
-          </ul>
-          <div class="div-buttons">
-            <button class="btn btn-outline-success boton-nav" type="button"><a class="text-button-login" href="login.html">iniciar sesión</a></button>
-            <button class="btn btn-outline-success boton-nav" type="button">Registrate</button>
-          </div>
-        </div>
-      </div>
+          alt="" width="80" height="30" />
+      </a>
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="pruebas.html">pruebas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="acercade.html">Acerca de</a>
+        </li>
+      </ul>
     </nav>
     <div class="cover d-flex justify-content-center align-items-center flex-column">
       <h1>
